--- a/src/main.css
+++ b/src/main.css
@@ -1,7 +1,3 @@
-body{
-	background-color: blue;
-}
-/*
 * {
 	margin: 0;
 	padding: 0;
@@ -11,4 +7,16 @@ body{
 article, aside, details, figcaption, figure, footer, header, main, nav, section, summary {
     display:block;
 }
-*/
+
+body{
+	background-color:#efefef;
+	display: flex;
+	flex-direction: column;
+
+
+}
+header{
+	#banner-icon{
+		flex-direction: row;
+	}
+}
