--- a/src/main.css
+++ b/src/main.css
@@ -18,19 +18,39 @@ body{
 	width: 70%;
 	margin: auto;
 }
-main{
-	width: 30%;
-	height: 150px;
+header{
+	padding: 20px 15px;
 }
 h1{
 	color: #d91604;
 }
+h2{
+	color: #0477bf;
+}
 #logo{
-	max-width: 50px;
+	width: 90%;
+	max-width: 90px;
+	position: relative;
+}
+#banner-icon{
+	display: flex;
+	justify-content: space-evenly;
 }
 img{
-	max-width: 300px;
+	max-width: 65%;
 	max-height: 300px;
+}
+main{
+	padding: 20px 15px 0px 15px;
+	width: 30%;
+}
+.buttons_container{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	max-width: 400px;
+	margin: auto;
 }
 a{
 	background-color:#f2622e;
@@ -38,7 +58,42 @@ a{
 	padding: 10px 10px;
 	color: white;
 	border-radius: 5px;
+	width: 50px;
+	text-align: center;
 }
-#plantBasedContainer{
+a:hover{
+	background-color: #d91604;
+}
+footer{
+	padding: 5px 15px 20px 15px;
+	display: flex;
+	flex-direction: column;
+}
+footer div{
+	color: #d91604;
 	font-family: 'Roboto', sans-serif;
+	width: 70%;
+}
+.food_container{
+	max-width: 500px;
+	margin: auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.food_container div{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+footer a{
+	margin: 20px 0px;
+}
+.refresh{
+	margin-top: 25px;
+}
+@media (min-width: 650px){
+	h1{
+		font-size: 2.5rem;
+	}
 }
